--- a/events.html
+++ b/events.html
@@ -100,6 +100,7 @@
 </div>
 <br>
 <h3 style="text-align: center;">Past Events</h3>
+<br>
 <div class="container">
   <div class="card-deck">
     <div class="card card-margin">
@@ -157,9 +158,46 @@
 </div>
 </div>
 </div>
-  </div>
-</div>
 <br>
+<div class = "card-deck">
+  <div class="card card-margin">
+    <div class="card-header no-border">
+        <h5 class="card-title">Bracelet Making</h5>
+    </div>
+    <div class="card-body pt-0">
+        <div class="widget-49">
+            <div class="widget-49-title-wrapper">
+                <div class="widget-49-date-warning">
+                    <span class="widget-49-date-day">30</span>
+                    <span class="widget-49-date-month">AUG</span>
+                </div>
+                <div class="widget-49-meeting-info">
+                    <span class="widget-49-pro-title">6:30PM at FB007</span>
+                </div>
+        </div>
+    </div>
+</div>
+</div>
+    <div class="card card-margin">
+        <div class="card-header no-border">
+            <h5 class="card-title">Bracelet Making</h5>
+        </div>
+        <div class="card-body pt-0">
+            <div class="widget-49">
+                <div class="widget-49-title-wrapper">
+                    <div class="widget-49-date-warning">
+                        <span class="widget-49-date-day">30</span>
+                        <span class="widget-49-date-month">AUG</span>
+                    </div>
+                    <div class="widget-49-meeting-info">
+                        <span class="widget-49-pro-title">6:30PM at FB007</span>
+                    </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+</div>
 <section class="subscription bg-white">
   <div class="container">
     <div class="row">
